package com.springboot.MyTodoList.user;

import io.swagger.v3.oas.annotations.Operation;
import io.swagger.v3.oas.annotations.security.SecurityRequirement;
import io.swagger.v3.oas.annotations.tags.Tag;
import jakarta.validation.Valid;
import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.Size;
import lombok.RequiredArgsConstructor;
import org.springframework.http.ResponseEntity;
import org.springframework.security.core.Authentication;
import org.springframework.validation.annotation.Validated;
import org.springframework.web.bind.annotation.*;

@RestController
@RequestMapping("/api/v1/users")
@RequiredArgsConstructor
@Validated
@Tag(name = "Users")
@SecurityRequirement(name = "bearerAuth")
public class UserController {

    private final UserService userService;

    @GetMapping("/me")
    @Operation(summary = "Get my profile")
    public ResponseEntity<UserResponse> getMe(Authentication auth) {
        return ResponseEntity.ok(userService.getMe(currentUserId(auth)));
    }

    @PutMapping("/me")
    @Operation(summary = "Update my profile")
    public ResponseEntity<UserResponse> updateMe(@Valid @RequestBody UserRequest request, Authentication auth) {
        return ResponseEntity.ok(userService.updateMe(currentUserId(auth), request));
    }

    @GetMapping("/search")
    @Operation(summary = "Search user by email")
    public ResponseEntity<UserSummary> searchByEmail(
            @RequestParam @NotBlank @Email @Size(max = 100, message = "must be a valid address (max 100 characters)") String email) {
        return ResponseEntity.ok(userService.findByEmail(email));
    }

    private Long currentUserId(Authentication auth) {
        return Long.parseLong(auth.getName());
    }
}
